[package]
name = "crypto-puller"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-prost-build = { version = "0.14.2", features = ["transport"], tonic-prost-build = "0.14.2" }

[lib]

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "migrate"] }
rdkafka = { version = "0.36", features = ["sasl", "ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
ethers = "2.0"
hex = "0.4"
dotenv = "0.15"
anyhow = "1.0"
sha2 = "0.10"
bs58 = "0.5.1"
axum = "0.8.7"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14"
figment = { version = "0.10", features = ["env", "toml"] }
tower-http = { version = "0.6.7", features = ["limit", "trace"] }
prometheus = "0.13"

[dev-dependencies]
axum-test = "18.0.2"
tokio-test = "0.4"
